feat: mongoose connection + user model + seed

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,17 +7,21 @@
     "build": "npx tsc",
     "watch": "npx tsc -w",
     "dev": "npx concurrently --kill-others  \"npm run watch\"  \" npx nodemon dist/index.js\" ",
-    "start": "nodemon dist/index.js"
+    "start": "nodemon dist/index.js",
+    "seed":"npm run build && node dist/index.js"
+    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "concurrently": "^9.2.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "mongoose": "^8.19.3",
     "nodemon": "^3.1.10",
     "socket.io": "^4.8.1"
   },
