--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,7 @@
     "watch": "npx tsc -w",
     "dev": "npx concurrently --kill-others  \"npm run watch\"  \" npx nodemon dist/index.js\" ",
     "start": "nodemon dist/index.js",
-    "seed":"npm run build && node dist/index.js"
-    
+    "seed": "npm run build && node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -21,12 +20,14 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.3",
     "nodemon": "^3.1.10",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.0",
     "typescript": "^5.9.3"
   }
