--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "dev": "npx concurrently --kill-others  \"npm run watch\"  \" npx nodemon dist/index.js\" ",
     "start": "nodemon dist/index.js",
     "seed": "npm run build && node dist/index.js",
-    "seed:message": "npm run build && node dist/seeders/message_seed.js"
+    "seed:message": "npm run build && node dist/seeders/seederChat.js"
   },
   "keywords": [],
   "author": "",
